Lab-6/style.css
@media screen and (max-width: 20000px) and (min-width: 1000px) {
  
body {
margin: 0;
padding: 0;
background-image: linear-gradient(to bottom right, #0b121a, #0c1319);
display: flex;
min-height: 100vh;
flex-direction: column;
gap: 30px;
color: #fff;
}
.h{
  width: 73%;
  height: 0.1px;
  border: 0 none;
  background-color: rgba(255,255,255,0.25);
  margin-right: auto;
  align-items: center;
}

.inputBox{
  position: relative;
  width: 250px;
}
.inputBox input{
  width: 100%;
  padding: 10px;
  border: 1px solid rgba(255,255,255,0.25);
  background: #0b121a;
  border-radius: 5px;
  outline: none;
  color: #fff;
  font-size: 1em;
  transition: 0.5s;
}
.inputBox span{
  position: absolute;
  left: 0;
  padding: 10px;
  pointer-events: none;
  font-size: 1em;
  color: rgba(255,255,255,0.25);
  text-transform: uppercase;
  transition: 0.5s;
}
.inputBox input:valid ~ span,
.inputBox input:focus ~ span{
  color: #76dbc1;
  transform: translateX(10px) translateY(-7px);
  font-size: 0.65em;
  padding: 0 10px;
  background: #0b121a;
  border-left: 1px solid #76dbc1;
  border-right: 1px solid #76dbc1;
  letter-spacing: 0.2em;
}
.inputBox input:valid,
.inputBox input:focus{
  border: 1px solid #76dbc1
}

.btn{
  border: 1px solid rgba(255,255,255,0.25);
  border-radius: 30px;
  background: none;
  padding: 10px 30px;
  font-size: 20px;
  font-weight: 300;
  cursor: pointer;
  margin: 10px;
  color: rgba(255,255,255,0.25);
  transition: 0.8s;
  position: relative;
  overflow: hidden;
}
.btn:hover{
  color: #fff;
}
.btn::before{
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 0%;
  background: #76dbc1;
  z-index: -1;
  transition: 0.8s;
  border-radius: 0 0 50% 50%;
}
.btn:hover::before{
  height: 180%;
}
.card{
  background-color: #0b121a00;
}

.jumbotron {
  margin: 0;
  text-align: left;
  background-color: #0b121a00;
  color: #fff;
  border-radius: 0%;
  font-size: 60pt;
  font-weight: 650
}

h1 {
  margin: 0;
}

h2 {
  margin: 0;
  text-align: left;
  font-weight: 300;
  font-size: 30pt;
}

h3 {
  font-weight: 200;
  font-size: 15pt;
}

h4 {
  font-weight: 100;
  font-size: 10pt;
}

h5 {
  font-weight: 600;
  font-size: 30pt

}

h6 {
  font-weight: 200;
  font-size: 15pt
}

textarea{
  width: 100%;
  padding: 1%;
  background-color: #0b121a00;
  border: 1px solid rgba(255,255,255,0.25);
  border-radius: 20px;
  color: #fff;
  font-size: 1em;
}


.textarea:focus{
  border: 2px solid #76dbc1
}

select{
  position: relative;
  width: 250px;
  background-color: #0b121a;
  border: 1px solid rgba(255,255,255,0.25);
  color: #fff;
}

.select:hover::after{
  background-color: #76dbc1;
  border: 1px solid #76dbc1;
}

.container{
  display:grid;
  height: 180vh;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr;
  grid-template-areas:
  "sidebar main main main"
  "sidebar main main main"
  "sidebar main main main"
  "content1 content2 content3 content4"
  "content5 content6 content7 content7";
  grid-gap: 1.5rem;

}

main{
  grid-area: main;
}

#sidebar{
  grid-area: sidebar;
  height: 100%;
}

#content1{
  grid-area: content1;
}

#content2{
  grid-area: content2;
}

#content3{
  grid-area: content3;
}

#content4{
  grid-area: content4;
}

#content5{
  grid-area: content5;
}

#content6{
  grid-area: content6;
}

#content7{
  grid-area: content7;
}


} @media screen and (max-width: 999px) {
  
body {
margin: 0;
padding: 0;
background-image: linear-gradient(to bottom right, #0b121a, #0c1319);
display: flex;
min-height: 100vh;
flex-direction: column;
gap: 30px;
color: #fff;
}
.h{
  width: 73%;
  height: 0.1px;
  border: 0 none;
  background-color: rgba(255,255,255,0.25);
  margin-right: auto;
  align-items: center;
}

.inputBox{
  position: relative;
  width: 250px;
}
.inputBox input{
  width: 100%;
  padding: 10px;
  border: 1px solid rgba(255,255,255,0.25);
  background: #0b121a;
  border-radius: 5px;
  outline: none;
  color: #fff;
  font-size: 1em;
  transition: 0.5s;
}
.inputBox span{
  position: absolute;
  left: 0;
  padding: 10px;
  pointer-events: none;
  font-size: 1em;
  color: rgba(255,255,255,0.25);
  text-transform: uppercase;
  transition: 0.5s;
}
.inputBox input:valid ~ span,
.inputBox input:focus ~ span{
  color: #76dbc1;
  transform: translateX(10px) translateY(-7px);
  font-size: 0.65em;
  padding: 0 10px;
  background: #0b121a;
  border-left: 1px solid #76dbc1;
  border-right: 1px solid #76dbc1;
  letter-spacing: 0.2em;
}
.inputBox input:valid,
.inputBox input:focus{
  border: 1px solid #76dbc1
}

.btn{
  border: 1px solid rgba(255,255,255,0.25);
  border-radius: 30px;
  background: none;
  padding: 10px 30px;
  font-size: 20px;
  font-weight: 300;
  cursor: pointer;
  margin: 10px;
  color: rgba(255,255,255,0.25);
  transition: 0.8s;
  position: relative;
  overflow: hidden;
}
.btn:hover{
  color: #fff;
}
.btn::before{
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 0%;
  background: #76dbc1;
  z-index: -1;
  transition: 0.8s;
  border-radius: 0 0 50% 50%;
}
.btn:hover::before{
  height: 180%;
}
.card{
  background-color: #0b121a00;
}

.jumbotron {
  margin: 0;
  text-align: left;
  background-color: #0b121a00;
  color: #fff;
  border-radius: 0%;
  font-size: 60pt;
  font-weight: 650
}

h1 {
  margin: 0;
}

h2 {
  margin: 0;
  text-align: left;
  font-weight: 300;
  font-size: 30pt;
}

h3 {
  font-weight: 200;
  font-size: 15pt;
}

h4 {
  font-weight: 100;
  font-size: 10pt;
}

h5 {
  font-weight: 600;
  font-size: 30pt

}

h6 {
  font-weight: 200;
  font-size: 15pt
}

textarea{
  width: 100%;
  padding: 1%;
  background-color: #0b121a00;
  border: 1px solid rgba(255,255,255,0.25);
  border-radius: 20px;
  color: #fff;
  font-size: 1em;
}


.textarea:focus{
  border: 2px solid #76dbc1
}

select{
  position: relative;
  width: 250px;
  background-color: #0b121a;
  border: 1px solid rgba(255,255,255,0.25);
  color: #fff;
}

.select:hover::after{
  background-color: #76dbc1;
  border: 1px solid #76dbc1;
}

.container{
  display:grid;
  height: 180vh;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr;
  grid-template-areas:
  "sidebar main main main"
  "sidebar main main main"
  "sidebar main main main"
  "content1 content2 content3 content4"
  "content5 content6 content7 content7";
  grid-gap: 1.5rem;

}

main{
  grid-area: main;
}

#sidebar{
  grid-area: sidebar;
  height: 100%;
}

#content1{
  grid-area: content1;
}

#content2{
  grid-area: content2;
}

#content3{
  grid-area: content3;
}

#content4{
  grid-area: content4;
}

#content5{
  grid-area: content5;
}

#content6{
  grid-area: content6;
}

#content7{
  grid-area: content7;
}

